# EMR

./: .gitignore  Cargo.toml  DEV-SESSION.md  LICENSE  Makefile  README.md  deny.toml  dev  justfile
.cursor/: README.md
.devcontainer/: README.md  devcontainer.json  docker-compose.override.yml  post-create.sh
.github/: README.md
.github/workflows/: ci.yml  deploy.yml  security.yml
api/: Cargo.toml  README.md
api/src/: config.rs  error.rs  main.rs
api/src/auth/: jwt.rs  mod.rs  oauth2.rs
api/src/database/: mod.rs
api/src/fhir/: mod.rs
api/src/handlers/: auth.rs  fhir.rs  health.rs  mod.rs  patients.rs
api/src/middleware/: auth.rs  mod.rs  security.rs
api/src/models/: mod.rs
api/src/repositories/: mod.rs
api/src/services/: mod.rs
core/: Cargo.toml  README.md
core/src/: error.rs  lib.rs
core/src/domain/: encounter.rs  mod.rs  observation.rs  organization.rs  patient.rs  practitioner.rs
core/src/repositories/: mod.rs
core/src/services/: mod.rs
demo/: index.html
docs/: README.md
docs/architecture/: auth-rbac-audit.md  backend.md  database.md  frontend.md  overview.md
docs/compliance/: hipaa-oriented-controls.md  phi-handling.md
docs/decisions/: ADR-001-frontend-stack.md  ADR-002-backend-framework.md  ADR-003-database-strategy.md  ADR-004-product-architecture.md
docs/development/: code-audit.md  coding-standards.md  local-setup.md
docs/product/: roles-and-workflows.md  vision.md
fhir/: Cargo.toml  README.md
fhir/src/: client.rs  lib.rs
infra/: README.md  docker-compose.yml  environment.template  init-db.sql  prometheus.yml
infra/dockerfiles/: Dockerfile.api  Dockerfile.jobs  Dockerfile.web
jobs/: Cargo.toml  README.md
jobs/src/: config.rs  handlers.rs  lib.rs  main.rs  types.rs  worker.rs
scripts/: dev-start.sh  initial-push.sh
web/: Cargo.toml  input.css
web/src/: app.rs  config.rs  error_template.rs  lib.rs  main.rs  state.rs  utils.rs
web/src/components/: common.rs  forms.rs  layout.rs  mod.rs  patient.rs
web/src/pages/: home.rs  mod.rs  patients.rs
