[workspace]
members = [
    "api",
    "core",
    "fhir",
    "jobs",
    "web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["EMR Team <team@emr.example.com>"]
license = "MIT"
repository = "https://github.com/example/emr-platform"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Web framework
actix-web = "4.8"
actix-cors = "0.7"
actix-files = "0.6"

# Database
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
deadpool-diesel = { version = "0.6", features = ["postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
oxide-auth = "0.7"
oxide-auth-actix = "0.7"
oauth2 = "4.4"

# FHIR
fhir-model = "0.6"
fhir-sdk = "0.6"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Message queue
async-nats = "0.35"

# Background jobs
apalis = { version = "0.5", features = ["postgres", "tokio", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Security
argon2 = "0.5"
jsonwebtoken = "9.3"

# Testing
mockall = "0.12"
wiremock = "0.6"

# Async trait support
async-trait = "0.1"

# URL encoding
urlencoding = "2.1"

# Leptos (web frontend)
leptos = { version = "0.8", features = ["csr", "ssr"] }
leptos_axum = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# TLS
rustls = "0.23"
rustls-pemfile = "2.1" 