[workspace]
members = [
    "api"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/GabeGiancarlo/EMR"
authors = ["Gabe Giancarlo <giancarlo@chapman.edu>"]

[workspace.dependencies]
# Common dependencies that might be shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] } 