[package]
name = "emr-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client (for future FHIR integration)
reqwest = { version = "0.12", features = ["json"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] } 